--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a href="https://laxmikalyan.com/assets/apk/laxmikayan.apk" class="appbox-btn">
                                 <i class="fas fa-phone-alt"></i> Call Now
                             </a>
-                            <a href="https://wa.me/+916377549707" class="appbox-btn" target="_blank">
+                            <a href="https://wa.me/+916377549707&text=Hello_Laxmi_matka" class="appbox-btn" target="_blank">
                                 <i class="fab fa-whatsapp"></i> WhatsApp
                             </a>
                         </div>
